chat-room-main/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-backend
  namespace: chat-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: chat-backend

  template:
    metadata:
      labels:
        app: chat-backend

    spec:
      containers:

        - name: backend

          image: YOUR_DOCKER_USERNAME/chat-backend:latest

          imagePullPolicy: Always

          ports:

            - containerPort: 8080
