chat-room-main/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: chat-frontend
  namespace: chat-app

spec:

  replicas: 2

  selector:
    matchLabels:
      app: chat-frontend

  template:

    metadata:

      labels:
        app: chat-frontend

    spec:

      containers:

        - name: frontend

          image: YOUR_DOCKER_USERNAME/chat-frontend:latest

          imagePullPolicy: Always

          ports:

            - containerPort: 80
