chat-room-main/k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: chat-backend-service
  namespace: chat-app

spec:

  selector:
    app: chat-backend

  ports:

    - port: 8080
      targetPort: 8080

  type: ClusterIP
