chat-room-main/k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: chat-frontend-service
  namespace: chat-app

spec:

  selector:
    app: chat-frontend

  ports:

    - port: 80
      targetPort: 80

  type: LoadBalancer
